fix error visibility in text widgets

--- a/style/text-viz.less
+++ b/style/text-viz.less
@@ -17,7 +17,7 @@
     }
 
     &.connect-viz-loading, &.connect-viz-in-error{
-        .connect-text-value span{
+        .connect-text-value > span{
             visibility: hidden;
         }
     }    
